# so-llm-bootcamp-project

./: .bandit  .dockerignore  .env.example  .env.template  .gitignore  CLAUDE.md  Dockerfile  FAISS_CACHING_GUIDE.md  Home.py  Makefile  PII_DETECTION_GUIDE.md  PII_IMPLEMENTATION_SUMMARY.md  README.md  agent_service.py  config.py  docker-compose.yml  generate_langgraph_presentation.py  healthcheck.py  langchain_helpers.py  langgraph_visualization.ipynb  main.py  pyproject.toml  requirements.txt  server.py  test_pii_integration.py  test_ssn_detection.py  ui_components.py
.github/: GITHUB_ACTIONS_SETUP.md  README.md  README_SECTION.md  WORKFLOWS_DIAGRAM.md  WORKFLOWS_README.md  labeler.yml  setup-labels.sh
.github/workflows/: ci.yml  dependency-update.yml  docker-publish.yml  performance.yml  pr-checks.yml
docs/: DOCKER.md  GITHUB_ACTIONS_SUMMARY.md  HEALTH_CHECK_2025-01-11.md  PII_INTEGRATION_GUIDE.md  PII_SAFETY_GUIDE.md  PRESENTATIONS_README.md  PRESENTATION_GUIDE.md  QUICKSTART_PII.md  application_flow_diagram.md  langgraph_agents_presentation.pptx  langgraph_presentation.md
pages/: 1_Basic_Chatbot.py  2_Chatbot_Agent.py  3_Chat_with_your_Data.py  4_MCP_Agent.py
tests/: health_check.py  test_pii_helper.py  test_pii_integration.py  test_query_pii.py
