[project]
name = "so-llm-bootcamp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv==2.2.0",
    "faiss-cpu==1.12.0",
    "langchain-anthropic==0.3.15",
    "langchain-community==0.3.29",
    "langchain-core==0.3.75",
    "langchain-experimental==0.3.4",
    "langchain-mcp-adapters==0.1.9",
    "langchain-openai==0.3.32",
    "langchain-tavily==0.2.11",
    "langchain-text-splitters>=0.3.9",
    "langgraph==0.6.6",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pypdf==6.0.0",
    "python-docx>=0.8.11",
    "requests>=2.31.0",
    "spacy>=3.7.0",
    "streamlit>=1.28.0",
    "tavily-python==0.7.1",
    "tiktoken==0.11.0",
    "wikipedia>=1.4.0",
]
